# geometadata_creator

./: .gitignore  Dockerfile  README.md  django_db_setup.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  reunioes.txt  test.py
app/: manage.py
app/core/: admin.py  fields.py  grid_utm.py  models.py  serializers.py  urls.py  utils.py  views.py
app/core/fixtures/: dump_fixtures.sh  f100.csv  f250.csv  form_fields.json  gmd_creator_app_metadataformfield.csv  index_map.json  metadata_fields.json  product_types.json
app/core/migrations/: 0001_initial.py  0002_indexmap.py
app/core/models/: __init__.py  geospatialresource.py  indexmap.py  producttype.py
app/core/tests/: test_build_metadata.py  test_endpoints.py  test_georesource_endpoints.py  test_gmd_extraction.py  test_grid_utm.py  test_send_xml.py
app/core/views/: __init__.py  cadastro_geral_views.py  georesouce_upload_views.py  (+1 more)
app/file_handler/: apps.py  extractor.py  grid_utm.py  schemas.py  utils.py
app/geometadata_creator/: asgi.py  settings.py  urls.py
app/gmd_creator_app/: apps.py  grid_utm.py  models.py  serializers.py  tests.py  urls.py  views.py
app/gmd_extractor/: extractor.py  grid_utm.py
app/xml_handler/: apps.py  constructor.py  extractor.py  fields.py  openisoxml.py  schemas.py  validator.py
configs/: pycsw.yml
docs/: wbs.puml
examples/: 76482d38-c7e7-11df-b182-00270e07db9f.xml  cfad8cc1-e710-4872-a139-bb6a57c4f1a1.xml  f100.gpkg  getcsw.py
geometadata_creator/: settings.py  urls.py  wsgi.py
gmd_creator_app/: admin.py  models.py  urls.py  views.py
(+14 files in other folders)
