[tool.poetry]
name = "pfc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
django = "^5.0.0"
djangorestframework = "^3.0.0"
pydantic = "^2.0.0"
markdown = "^3.0.0"
django-filter = "^24.0"
django-guardian = "^2.4.0"
owslib = "^0.28.0 "#OGC services client. Mainly CSW.
django-simple-history = "^3.7.0"
django-admin-extra-buttons = "^1.0.0"
django-constance = "^3.1.0"
drf-spectacular = "^0.27.0"
rasterio = "^1.3.0"


[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.5.1"
django-stubs = "^5.0.2"
django-stubs-ext = "^5.0.2"
psycopg2-binary = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
